# pythonProjectkursov

./: .coverage  .env  .flake8  .gitignor  README.md  pyproject.toml  settings.py
data/: operations
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
